Fixed Footer Spacing on Watch Page
Not sure exactly why this was happening, but fiddiling with the
.gridcContainer height fixed it.

--- a/_sass/_watch.scss
+++ b/_sass/_watch.scss
@@ -3,5 +3,5 @@
 }
 
 .gridContainer {
-  min-height: calc(100% - 200px);
+  min-height: calc(100% - 180px);
 }
